feat: add header desctop no styles

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -72,5 +72,19 @@
         <option><a>Аксессуары</a></option>
       </select>
     </form>
+
+    <ul class="list-reset header__usershop">
+      <li class="header__user">
+        <svg class="header__user-img">
+          <use xlink:href="img/sprite.svg#user"></use>
+        </svg>
+      </li>
+      <li class="header__shop">
+        <span class="header__shop-count">0</span>
+        <svg class="header__shop-img">
+          <use xlink:href="img/sprite.svg#shop"></use>
+        </svg>
+      </li>
+    </ul>
   </div>
 </header>
