--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -123,6 +123,7 @@
 
   &__form {
     grid-column: 1/11;
+    display: flex;
 
     &-label {
       position: relative;
@@ -168,15 +169,82 @@
 
     & .choices {
       display: inline-block;
+      width: 300px;
+      height: 60px;
+      border: 2px solid #F7F7F7;
+      border-radius: 0px 10px 10px 0px;
+    }
+
+    & .choices__inner {
+      font-family: 'Open Sans';
+      font-style: normal;
+      font-weight: 400;
+      font-size: 16px;
+      line-height: 22px;
+      color: var(--primary-color);
+    }
+
+    & .choices__list--dropdown .choices__list {
+      display: grid;
+      grid-auto-flow: column;
+      grid-column-gap: 11px;
+      grid-template-columns: 1fr 1fr;
+      grid-template-rows: repeat(5, 32px);
+      min-height: 200px;
+    }
+
+    & .choices .choices__list.choices__list--dropdown .choices__placeholder {
+      display: none;
+    }
+
+    & .choices__list--dropdown, .choices__list[area-expanded] {
+      border-radius: 0 0 20px 20px;
+      border: 2px solid #F7F7F7;
+    }
+  }
+
+  &__usershop {
+    grid-column: 11/13;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+  }
+
+  &__user {
+    margin-right: 43px;
+
+    &-img {
+      width: 26px;
+      height: 28px;
+      fill: var(--primary-color);
+    }
+  }
+
+  &__shop {
+    position: relative;
+
+    &-count {
+      position: absolute;
+      top: 5px;
+      left: -9px;
+      width: 14px;
+      height: 15px;
+      padding-top: 3px;
+      border-radius: 100%;
+      background-color: var(--secondary-color);
+      font-family: 'Open Sans';
+      font-style: normal;
+      font-weight: 700;
+      font-size: 10px;
+      line-height: 100%;
+      color: var(--white-color);
+      text-align: center;
+    }
+
+    &-img {
+      width: 30px;
+      height: 28px;
+      fill: var(--primary-color);
     }
   }
 }
-
-// .header__form .choices {
-//   /*.header__сategories-form*/
-//   border: 2px solid var(--color-wildSand);
-//   border-radius: 0 10px 10px 0;
-//   width: 28%;
-//   outline: none;
-//   transition: color .4s ease-in-out, background-color .4s ease-in-out;
-// }
