feat: add header perfectPixel desctop and style and fixed bug fonts

--- a/src/scss/_fonts.scss
+++ b/src/scss/_fonts.scss
@@ -1,4 +1,4 @@
-@include font-face("OpenSans-Regular", "../fonts/OpenSans-Regular", 400, normal);
-@include font-face("OpenSans-SemiBold", "../fonts/OpenSans-SemiBold", 600, normal);
-@include font-face("OpenSans-Bold", "../fonts/OpenSans-Bold", 700, normal);
+@include font-face("Open Sans", "../fonts/OpenSansRegular", 400, normal);
+@include font-face("Open Sans", "../fonts/OpenSansSemiBold", 600, normal);
+@include font-face("Open Sans", "../fonts/OpenSansBold", 700, normal);
 @include font-face("PlayfairDisplay-Black", "../fonts/PlayfairDisplay-Black", 900, normal);
