--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -12,10 +12,12 @@
           </select>
         </div>
       </div>
-      <a href="tel:+749542423532" class="header__phone-link">
+      <a href="tel:+74958854547" class="header__phone-link">
         <svg class="header__phone-img">
           <use xlink:href="img/sprite.svg#phone"></use>
-        </svg>+7 495 424-23-532</a>
+        </svg>
+        <no-typography>+7 (495) 885-45-47</no-typography>
+      </a>
     </div>
     <ul class="list-reset header__list-about">
       <li class="header__item-about">
@@ -32,7 +34,8 @@
       </li>
     </ul>
 
-    <a href="#" class="header__link-logo"><img loading="lazy" src="img/logo.svg" class="header__img-logo" width="187" height="27" alt="Логотип сети магазинов SitDownPls"></a>
+    <a href="#" class="header__link-logo"><img loading="lazy" src="img/logo.svg" class="header__img-logo" width="187"
+        height="27" alt="Логотип сети магазинов SitDownPls"></a>
 
     <div class="header__wrap-nav">
       <nav class="header__nav" title="Навигация по сайту">
@@ -59,6 +62,8 @@
           </svg>
         </button>
       </label>
+    </form>
+    <div class="header__categories">
       <select class="header__сategories-select" aria-label="Выбрать мебель">
         <option value="">Категория</option>
         <option><a>Диваны</a></option>
@@ -71,20 +76,19 @@
         <option><a>Столы</a></option>
         <option><a>Аксессуары</a></option>
       </select>
-    </form>
-
-    <ul class="list-reset header__usershop">
-      <li class="header__user">
+    </div>
+    <div class="header__usershop">
+      <button class="btn-reset header__user">
         <svg class="header__user-img">
           <use xlink:href="img/sprite.svg#user"></use>
         </svg>
-      </li>
-      <li class="header__shop">
+      </button>
+      <button class="btn-reset header__shop">
         <span class="header__shop-count">0</span>
         <svg class="header__shop-img">
           <use xlink:href="img/sprite.svg#shop"></use>
         </svg>
-      </li>
-    </ul>
+      </button>
+    </div>
   </div>
 </header>
