--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -1,11 +1,22 @@
 .header {
-  background: linear-gradient(180deg, #f6f6f6 0%, #f6f6f6 23%, #fff 23%, #fff 100%);
-  max-height: max-content;
+  position: relative;
+  margin-bottom: 30px;
+
+  &::after {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 50px;
+    top: 0;
+    left: 0;
+    background-color: var(--grey-light-color);
+    z-index: -1;
+  }
 
   &__container {
     display: grid;
     grid-template-columns: repeat(12, 1fr);
-    grid-template-rows: 53px 28px 60px;
+    grid-template-rows: 52px 28px 60px;
     gap: 30px 2px;
   }
 
@@ -22,8 +33,6 @@
   }
 
   &__region-title {
-    font-family: 'Open Sans';
-    font-weight: 400;
     font-size: 16px;
     line-height: 120%;
     color: var(--night-rider-color);
@@ -31,7 +40,7 @@
 
   &__city .choices__inner {
     position: relative;
-    padding: 6.5px 4px;
+    padding: 6.5px 8px 6.5px 0px;
     font-size: 16px;
     line-height: 22px;
     color: var(--primary-color);
@@ -45,8 +54,6 @@
   }
 
   &__city .choices__list--dropdown .choices__item--selectable {
-    font-family: 'Open Sans';
-    font-style: normal;
     font-weight: 400;
     font-size: 14px;
     line-height: 130%;
@@ -68,7 +75,7 @@
   }
 
   &__city .choices__list--dropdown {
-    top: 75%;
+    top: 105%;
   }
 
   &__phone {
@@ -76,8 +83,8 @@
     &-link {
       display: flex;
       align-items: center;
-      font-family: 'Open Sans';
-      font-weight: 400;
+      padding-bottom: 2px;
+      margin-left: -0.3px;
       font-size: 14px;
       line-height: 100%;
       color: var(--secondary-color);
@@ -95,11 +102,10 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    padding: 0 0 4px 36px;
   }
 
   &__link-about {
-    font-family: 'Open Sans';
-    font-weight: 400;
     font-size: 14px;
     line-height: 100%;
     color: var(--grey-color);
@@ -118,11 +124,12 @@
       display: flex;
       align-items: center;
       justify-content: space-between;
+      padding: 5px 3px 5px 7px;
     }
   }
 
   &__form {
-    grid-column: 1/11;
+    grid-column: 1/8;
     display: flex;
 
     &-label {
@@ -131,8 +138,8 @@
 
     &-search {
       position: absolute;
-      top: 0;
-      left: 0;
+      top: 21px;
+      left: 32px;
       width: 20px;
       height: 20px;
       fill: var(--grey-color);
@@ -146,42 +153,47 @@
       outline: none;
 
       &::placeholder {
-        padding-left: 51px;
+        padding-left: 59px;
       }
     }
 
     &-btn {
       position: absolute;
-      top: 0;
-      right: 0;
-      width: 32px;
+      top: 15px;
+      right: 32px;
+      width: 32.05px;
       height: 32px;
       border-radius: 100px;
       border: 2px solid var(--primary-color);
 
       &-img {
-        width: 5px;
-        height: 10px;
+        width: 8px;
+        height: 28px;
         fill: transparent;
         stroke: var(--primary-color);
       }
     }
+  }
 
-    & .choices {
-      display: inline-block;
-      width: 300px;
-      height: 60px;
-      border: 2px solid #F7F7F7;
-      border-radius: 0px 10px 10px 0px;
+  &__categories {
+    grid-column: 8/11;
+    max-width: 313px;
+    border: 2px solid #F7F7F7;
+    border-radius: 0px 10px 10px 0px;
+
+    & .choices__list--single {
+      padding: 10px 0 0 36px;
     }
 
     & .choices__inner {
-      font-family: 'Open Sans';
-      font-style: normal;
-      font-weight: 400;
       font-size: 16px;
       line-height: 22px;
       color: var(--primary-color);
+    }
+
+    & .choices[data-type*=select-one]:after {
+      right: 32px;
+      top: 58%;
     }
 
     & .choices__list--dropdown .choices__list {
@@ -190,16 +202,21 @@
       grid-column-gap: 11px;
       grid-template-columns: 1fr 1fr;
       grid-template-rows: repeat(5, 32px);
-      min-height: 200px;
+      min-height: 180px;
     }
 
     & .choices .choices__list.choices__list--dropdown .choices__placeholder {
       display: none;
     }
 
-    & .choices__list--dropdown, .choices__list[area-expanded] {
-      border-radius: 0 0 20px 20px;
+    & .choices__list--dropdown,
+    .choices__list[area-expanded] {
+      top: 112%;
+      left: 10px;
+      max-width: 300px;
+      border-radius: 0 0 10px 10px;
       border: 2px solid #F7F7F7;
+      background-color: var(--white-color);
     }
   }
 
@@ -212,6 +229,7 @@
 
   &__user {
     margin-right: 43px;
+    padding-top: 6px;
 
     &-img {
       width: 26px;
@@ -222,18 +240,17 @@
 
   &__shop {
     position: relative;
+    padding-top: 6px;
 
     &-count {
       position: absolute;
-      top: 5px;
-      left: -9px;
+      top: 10.7px;
+      left: -11px;
       width: 14px;
       height: 15px;
-      padding-top: 3px;
+      padding-top: 2.6px;
       border-radius: 100%;
       background-color: var(--secondary-color);
-      font-family: 'Open Sans';
-      font-style: normal;
       font-weight: 700;
       font-size: 10px;
       line-height: 100%;
