feat: add header effects hover, focus-visible, active and fix bug perfect pixel

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -16,7 +16,7 @@
         <svg class="header__phone-img">
           <use xlink:href="img/sprite.svg#phone"></use>
         </svg>
-        <no-typography>+7 (495) 885-45-47</no-typography>
+        <span><no-typography>+7 (495) 885-45-47</no-typography></span>
       </a>
     </div>
     <ul class="list-reset header__list-about">
@@ -52,10 +52,10 @@
 
     <form action="#" class="header__form">
       <label class="header__form-label">
+        <input type="text" name="Имя" class="input-reset header__form-input" placeholder="Я хочу купить...">
         <svg class="header__form-search">
           <use xlink:href="img/sprite.svg#search"></use>
         </svg>
-        <input type="text" name="Имя" class="input-reset header__form-input" placeholder="Я хочу купить...">
         <button class="btn-reset header__form-btn">
           <svg class="header__form-btn-img">
             <use xlink:href="img/sprite.svg#arrowSearch"></use>
