--- a/src/scss/_settings.scss
+++ b/src/scss/_settings.scss
@@ -29,6 +29,7 @@ img {
 
 a {
   text-decoration: none;
+  outline: none;
 }
 
 .site-container {
@@ -44,6 +45,7 @@ a {
   padding: 0;
   background: transparent;
   cursor: pointer;
+  outline: none;
 }
 
 .list-reset {
