--- a/src/scss/components/_select.scss
+++ b/src/scss/components/_select.scss
@@ -12,6 +12,11 @@
   border-right: 1px solid #A65CF0;
   border-top: 1px solid #A65CF0;
   transform: rotate(135deg);
+  transition: border-color .3s ease-in-out;
+}
+
+.choices[data-type*=select-one]:hover:not(:focus-visible)::after {
+  border-color: var(--primary-light-color);
 }
 
 .choices[data-type*=select-one].is-open:after {
@@ -29,4 +34,8 @@
 /*Названия в option стали горизонтальными*/
 .choices__list--dropdown .choices__item--selectable {
   padding: 10px;
+}
+
+.choices__placeholder {
+  opacity: 1;
 }
