--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -5,7 +5,9 @@
 @import "settings";
 
 // подключения компонентов страницы
+@import "./components/nav";
 @import "./components/select";
+@import "./components/burger";
 @import "./components/header";
 @import "./components/hero";
 
