--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -11,19 +11,40 @@
     left: 0;
     background-color: var(--grey-light-color);
     z-index: -1;
+
+    @include big-desktop {
+      & {
+        top: 20%;
+      }
+    }
   }
 
   &__container {
     display: grid;
     grid-template-columns: repeat(12, 1fr);
     grid-template-rows: 52px 28px 60px;
-    gap: 30px 2px;
+    row-gap: 30px;
+
+    @include big-desktop {
+      & {
+        grid-template-columns: repeat(9, 1fr);
+        grid-template-rows: 59px 45px 42px 60px;
+        row-gap: 18px;
+      }
+    }
   }
 
   &__region-phone {
     grid-column: 1/5;
     display: flex;
     align-items: center;
+
+    @include big-desktop {
+      grid-column: 1/10;
+      grid-row: 1;
+      order: 1;
+      justify-content: space-between;
+    }
   }
 
   &__region-wrap {
@@ -186,6 +207,15 @@
     align-items: center;
     justify-content: space-between;
     padding: 0 0 4px 36px;
+
+    @include big-desktop {
+      & {
+        grid-column: 1/8;
+        grid-row: 2;
+        order: 2;
+        padding: 0 31px 35px 0;
+      }
+    }
   }
 
   &__link-about {
@@ -234,56 +264,23 @@
 
   &__link-logo {
     grid-column: 1/3;
+
+    @include big-desktop {
+      & {
+        grid-column: 1/3;
+        grid-row: 3;
+        order: 4;
+      }
+    }
   }
 
   &__wrap-nav {
     grid-column: 4/13;
-  }
 
-  &__nav {
-    &-list {
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      padding: 3px 3px 5px 7px;
-    }
-
-    &-link {
-      position: relative;
-      font-size: 16px;
-      line-height: 22px;
-      color: var(--night-rider-color);
-      transition: color .3s ease-in-out;
-
-      @include hover {
-        +& {
-          color: var(--primary-color);
-        }
-      }
-
-      &::before {
-        content: '';
-        position: absolute;
-        top: 0;
-        left: -10px;
-        bottom: 0;
-        right: 0;
-        width: calc(100% + 20px);
-        height: 100%;
-        background-color: var(--pink-violet-color);
-        transform: translate(0, 0) scaleX(0);
-        transform-origin: center;
-        transition: transform .3s ease-in-out;
-        z-index: -1;
-      }
-
-      &:focus-visible:not(:active):not(:hover)::before {
-        transform: translate(0, 0) scaleX(1);
-      }
-
-      &:active {
-        color: var(--primary-shade-color);
-      }
+    @include big-desktop {
+      grid-column: 3/10;
+      grid-row: 3;
+      order: 5;
     }
   }
 
@@ -291,8 +288,17 @@
     grid-column: 1/8;
     display: flex;
 
+    @include big-desktop {
+      & {
+        grid-column: 1/7;
+        grid-row: 4;
+        order: 6;
+      }
+    }
+
     &-label {
       position: relative;
+      width: 100%;
 
       &:active .header__form-search .header__form-input {
         fill: var(--primary-color);
@@ -306,11 +312,17 @@
       width: 20px;
       height: 20px;
       fill: var(--grey-color);
+
+      @include big-desktop {
+        & {
+          top: 20px;
+        }
+      }
     }
 
     &-input {
       padding-left: 59px;
-      width: 761px;
+      width: 100%;
       height: 60px;
       font-size: 16px;
       line-height: 120%;
@@ -343,7 +355,7 @@
     &-btn {
       position: absolute;
       top: 15px;
-      right: 32px;
+      right: 17px;
       width: 32.05px;
       height: 32px;
       border-radius: 100px;
@@ -381,25 +393,48 @@
         background-color: var(--primary-shade-color);
         border-color: var(--primary-shade-color);
       }
+
+      @include big-desktop {
+        & {
+          top: 14px;
+          right: 15px;
+        }
+      }
     }
   }
 
   &__categories {
     grid-column: 8/11;
     position: relative;
-    left: 13px;
-    max-width: 300px;
+    left: 9px;
+    max-width: 100%;
+    margin-left: -15px;
     border: 2px solid #F7F7F7;
     border-radius: 0px 10px 10px 0px;
     outline: none;
 
+    @include big-desktop {
+      & {
+        grid-column: 7/10;
+        grid-row: 4;
+        order: 7;
+        margin-left: -9px;
+      }
+    }
+
     & .choices {
-      max-width: 300px;
+      max-width: 100%;
       height: 56px;
     }
 
     & .choices__list--single {
-      padding: 10px 0 0 22px;
+      padding: 10px 0 0 42px;
+
+      @include big-desktop {
+        & {
+          padding: 9px 0 0 39px;
+        }
+      }
     }
 
     & .choices__inner {
@@ -411,6 +446,10 @@
     & .choices[data-type*=select-one]:after {
       right: 32px;
       top: 49%;
+
+      @include big-desktop {
+        top: 47%;
+      }
     }
 
     & .choices__list--dropdown .choices__list {
@@ -430,7 +469,7 @@
     .choices__list[area-expanded] {
       top: 100%;
       left: 0;
-      max-width: 300px;
+      max-width: 100%;
       border-radius: 0 0 10px 10px;
       border: 2px solid #F7F7F7;
       background-color: var(--white-color);
@@ -465,6 +504,13 @@
     display: flex;
     align-items: center;
     justify-content: flex-end;
+
+    @include big-desktop {
+      grid-column: 8/10;
+      grid-row: 2;
+      order: 3;
+      padding: 0 0 35px 0;
+    }
   }
 
   &__user {
