--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -32,6 +32,14 @@
         row-gap: 18px;
       }
     }
+
+    @include high-tablet {
+      & {
+        grid-template-columns: repeat(6, 1fr);
+        grid-template-rows: 59px 45px 42px 60px;
+        row-gap: 18px;
+      }
+    }
   }
 
   &__region-phone {
@@ -40,10 +48,18 @@
     align-items: center;
 
     @include big-desktop {
-      grid-column: 1/10;
-      grid-row: 1;
-      order: 1;
-      justify-content: space-between;
+      & {
+        grid-column: 1/10;
+        grid-row: 1;
+        order: 1;
+        justify-content: space-between;
+      }
+    }
+
+    @include high-tablet {
+      & {
+        grid-column: 1/7;
+      }
     }
   }
 
@@ -216,6 +232,13 @@
         padding: 0 31px 35px 0;
       }
     }
+
+    @include high-tablet {
+      & {
+        grid-column: 1/7;
+        padding: 0 1px 35px 0;
+      }
+    }
   }
 
   &__link-about {
@@ -271,6 +294,14 @@
         grid-row: 3;
         order: 4;
       }
+
+      @include high-tablet {
+        & {
+          grid-column: 3/5;
+          text-align: center;
+          padding: 1px 1px 0 0;
+        }
+      }
     }
   }
 
@@ -278,9 +309,18 @@
     grid-column: 4/13;
 
     @include big-desktop {
-      grid-column: 3/10;
-      grid-row: 3;
-      order: 5;
+      & {
+        grid-column: 3/10;
+        grid-row: 3;
+        order: 5;
+      }
+    }
+
+    @include high-tablet {
+      & {
+        grid-column: 1/2;
+        order: 3;
+      }
     }
   }
 
@@ -293,6 +333,12 @@
         grid-column: 1/7;
         grid-row: 4;
         order: 6;
+      }
+    }
+
+    @include high-tablet {
+      & {
+        grid-column: 1/5;
       }
     }
 
@@ -400,6 +446,12 @@
           right: 15px;
         }
       }
+
+      @include high-tablet {
+        & {
+          right: 13px;
+        }
+      }
     }
   }
 
@@ -422,6 +474,12 @@
       }
     }
 
+    @include high-tablet {
+      & {
+        grid-column: 5/7;
+      }
+    }
+
     & .choices {
       max-width: 100%;
       height: 56px;
@@ -433,6 +491,12 @@
       @include big-desktop {
         & {
           padding: 9px 0 0 39px;
+        }
+      }
+
+      @include high-tablet {
+        & {
+          padding: 9px 0 0 41px;
         }
       }
     }
@@ -459,6 +523,13 @@
       grid-template-columns: 1fr 1fr;
       grid-template-rows: repeat(5, 32px);
       min-height: 180px;
+
+      @include high-tablet {
+        & {
+          grid-template-columns: 1fr;
+          grid-template-rows: repeat(10, 32px);
+        }
+      }
     }
 
     & .choices .choices__list.choices__list--dropdown .choices__placeholder {
@@ -506,10 +577,21 @@
     justify-content: flex-end;
 
     @include big-desktop {
-      grid-column: 8/10;
-      grid-row: 2;
-      order: 3;
-      padding: 0 0 35px 0;
+      & {
+        grid-column: 8/10;
+        grid-row: 2;
+        order: 3;
+        padding: 0 0 35px 0;
+      }
+    }
+
+    @include high-tablet {
+      & {
+        grid-column: 5/7;
+        grid-row: 3;
+        order: 5;
+        padding: 0 0 17px 0;
+      }
     }
   }
 
