fix: bug adaptive header 768

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -20,17 +20,10 @@
       </a>
     </div>
     <ul class="list-reset header__list-about">
-      <li class="header__item-about">
-        <a href="#" class="header__link-about">О компании</a>
-      </li>
-      <li class="header__item-about">
-        <a href="#" class="header__link-about">Гарантия и возврат</a>
-      </li>
-      <li class="header__item-about">
-        <a href="#" class="header__link-about">Корпоративным клиентам</a>
-      </li>
-      <li class="header__item-about">
-        <a href="#" class="header__link-about">Дизайн-решение</a>
+      <li class="header__item-about"><a href="#" class="header__link-about">О компании</a></li>
+      <li class="header__item-about"><a href="#" class="header__link-about">Гарантия и возврат</a></li>
+      <li class="header__item-about"><a href="#" class="header__link-about">Корпоративным клиентам</a></li>
+      <li class="header__item-about"><a href="#" class="header__link-about">Дизайн-решение</a>
       </li>
     </ul>
 
