--- a/src/scss/_settings.scss
+++ b/src/scss/_settings.scss
@@ -46,6 +46,8 @@ a {
   background: transparent;
   cursor: pointer;
   outline: none;
+  -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
+  -webkit-tap-highlight-color: transparent;
 }
 
 .list-reset {
@@ -93,10 +95,18 @@ a {
       padding: 0 72px;
     }
   }
+
+  @include mobile {
+    & {
+      padding: 0 12px;
+    }
+  }
 }
 
 .js-focus-visible :focus:not(.focus-visible) {
   outline: none;
+  -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
+  -webkit-tap-highlight-color: transparent;
 }
 
 .centered {
