--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -23,6 +23,12 @@
         top: 34%;
       }
     }
+
+    @include mobile {
+      & {
+        top: 0;
+      }
+    }
   }
 
   &__container {
@@ -52,6 +58,13 @@
         grid-template-rows: 59px 0 42px 60px;
       }
     }
+
+    @include mobile {
+      & {
+        grid-template-rows: 47px 68px 52px 62px 60px;
+        row-gap: 14px;
+      }
+    }
   }
 
   &__region-phone {
@@ -73,12 +86,30 @@
         grid-column: 1/7;
       }
     }
+
+    @include mobile {
+      & {
+        grid-column: 1/5;
+        grid-row: 2;
+        order: 2;
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: space-between;
+      }
+    }
   }
 
   &__region-wrap {
     display: flex;
     align-items: center;
     margin-right: 28px;
+
+    @include mobile {
+      & {
+        margin-right: 0;
+        margin-top: -5px;
+      }
+    }
   }
 
   &__region-title {
@@ -177,6 +208,13 @@
       color: var(--secondary-color);
       transition: color .3s ease-in-out;
       outline: none;
+      z-index: 0;
+
+      @include mobile {
+        & {
+          padding-top: 5px;
+        }
+      }
 
       & span {
         z-index: 1;
@@ -321,6 +359,15 @@
           padding: 1px 1px 0 0;
         }
       }
+
+      @include mobile {
+        & {
+          grid-column: 2/6;
+          grid-row: 1;
+          order: 1;
+          padding: 12px 1px 0 0;
+        }
+      }
     }
   }
 
@@ -358,6 +405,12 @@
     @include high-tablet {
       & {
         grid-column: 1/5;
+      }
+    }
+
+    @include mobile {
+      & {
+        grid-column: 1/7;
       }
     }
 
@@ -471,6 +524,12 @@
           right: 13px;
         }
       }
+
+      @include mobile {
+        & {
+          right: 32px;
+        }
+      }
     }
   }
 
@@ -499,6 +558,14 @@
       }
     }
 
+    @include mobile {
+      & {
+        grid-column: 1/7;
+        grid-row: 5;
+        border-radius: 10px;
+      }
+    }
+
     & .choices {
       max-width: 100%;
       height: 56px;
@@ -522,6 +589,12 @@
       @include small-tablet {
         & {
           padding: 9px 0 0 5px;
+        }
+      }
+
+      @include mobile {
+        & {
+          padding: 9.5px 0 0 23px;
         }
       }
     }
@@ -567,7 +640,7 @@
       left: 0;
       max-width: 100%;
       border-radius: 0 0 10px 10px;
-      border: 2px solid #F7F7F7;
+      border: 2px solid var(--grey-light-color);
       background-color: var(--white-color);
     }
 
@@ -581,6 +654,13 @@
         border-color: var(--primary-color);
         border-radius: 0px 10px 10px 0px;
       }
+
+      @include mobile {
+        & {
+          border-color: var(--grey-light-color);
+          border-radius: 10px;
+        }
+      }
     }
 
     & .choices:focus-visible:not(:active):not(:hover) {
@@ -592,6 +672,13 @@
     & .choices:active {
       border-radius: 0px 10px 10px 0px;
       outline: 2px solid var(--primary-shade-color);
+
+      @include mobile {
+        & {
+          outline-color: var(--grey-light-color);
+          border-radius: 10px;
+        }
+      }
     }
   }
 
@@ -616,6 +703,12 @@
         grid-row: 3;
         order: 5;
         padding: 0 0 17px 0;
+      }
+    }
+
+    @include mobile {
+      & {
+        padding: 0 0 4px 0;
       }
     }
   }
