--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -31,6 +31,20 @@
     }
   }
 
+  @include mobile {
+    &::before {
+      content: "";
+      position: absolute;
+      width: 100%;
+      height: 50px;
+      top: 38%;
+      left: 0;
+      z-index: -1;
+      border-top: 1px solid var(--grey-light-color);
+      border-bottom: 1px solid var(--grey-light-color);
+    }
+  }
+
   &__container {
     display: grid;
     grid-template-columns: repeat(12, 1fr);
