feat: add adaptive burger and style burger

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -50,6 +50,18 @@
           <li class="header__nav-item"><a href="#" class="header__nav-link" data-menu-item data-scroll>Дисконт</a></li>
           <li class="header__nav-item"><a href="#" class="header__nav-link" data-menu-item data-scroll>Контакты</a></li>
         </ul>
+
+        <svg class="header__nav-img">
+          <use xlink:href="img/sprite.svg#logoBurger"></use>
+        </svg>
+
+        <ul class="list-reset header__nav-about header__nav-about--bg">
+          <li class="header__item-about header__nav-item-about"><a href="#" class="header__link-about header__nav-about-link">О компании</a></li>
+          <li class="header__item-about header__nav-item-about header__nav-item-about--ml"><a href="#" class="header__link-about header__nav-about-link">Гарантия и возврат</a></li>
+          <li class="header__item-about header__nav-item-about"><a href="#" class="header__link-about header__nav-about-link">Корпоративным клиентам</a></li>
+          <li class="header__item-about header__nav-item-about header__nav-item-about--pl"><a href="#" class="header__link-about header__nav-about-link">Дизайн-решение</a>
+          </li>
+        </ul>
       </nav>
     </div>
 
