--- a/src/scss/components/_burger.scss
+++ b/src/scss/components/_burger.scss
@@ -17,6 +17,7 @@
   &-img {
     width: 24px;
     height: 24px;
+    fill: var(--primary-color);
   }
 
   &-close {
@@ -25,12 +26,29 @@
     @include high-tablet {
       & {
         display: block;
+        position: absolute;
+        left: 9.5%;
+        top: 11.9%;
+      }
+    }
+
+    @include small-tablet {
+      & {
+        top: 2%;
+      }
+    }
+
+    @include mobile {
+      & {
+        top: 2.45%;
+        left: 5.1%;
       }
     }
 
     &-img {
       width: 24px;
       height: 24px;
+      fill: var(--primary-color);
     }
   }
 }
