--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,5 +1,65 @@
 <section class="hero">
-  <div class="container">
-    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nulla doloremque enim sed et fuga. Facilis debitis, nulla autem repellendus perferendis, libero esse quisquam quod tempore nisi unde? Cum, quibusdam tempora?Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nulla doloremque enim sed et fuga. Facilis debitis, nulla autem repellendus perferendis, libero esse quisquam quod tempore nisi unde? Cum, quibusdam tempora?Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nulla doloremque enim sed et fuga. Facilis debitis, nulla autem repellendus perferendis, libero esse quisquam quod tempore nisi unde? Cum, quibusdam tempora?Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nulla doloremque enim sed et fuga. Facilis debitis, nulla autem repellendus perferendis, libero esse quisquam quod tempore nisi unde? Cum, quibusdam tempora?Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nulla doloremque enim sed et fuga. Facilis debitis, nulla autem repellendus perferendis, libero esse quisquam quod tempore nisi unde? Cum, quibusdam tempora?Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nulla doloremque enim sed et fuga. Facilis debitis, nulla autem repellendus perferendis, libero esse quisquam quod tempore nisi unde? Cum, quibusdam tempora?Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nulla doloremque enim sed et fuga. Facilis debitis, nulla autem repellendus perferendis, libero esse quisquam quod tempore nisi unde? Cum, quibusdam tempora?Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nulla doloremque enim sed et fuga. Facilis debitis, nulla autem repellendus perferendis, libero esse quisquam quod tempore nisi unde? Cum, quibusdam tempora?Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nulla doloremque enim sed et fuga. Facilis debitis, nulla autem repellendus perferendis, libero esse quisquam quod tempore nisi unde? Cum, quibusdam tempora?Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nulla doloremque enim sed et fuga. Facilis debitis, nulla autem repellendus perferendis, libero esse quisquam quod tempore nisi unde? Cum, quibusdam tempora?Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nulla doloremque enim sed et fuga. Facilis debitis, nulla autem repellendus perferendis, libero esse quisquam quod tempore nisi unde? Cum, quibusdam tempora?Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nulla doloremque enim sed et fuga. Facilis debitis, nulla autem repellendus perferendis, libero esse quisquam quod tempore nisi unde? Cum, quibusdam tempora?Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nulla doloremque enim sed et fuga. Facilis debitis, nulla autem repellendus perferendis, libero esse quisquam quod tempore nisi unde? Cum, quibusdam tempora?Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nulla doloremque enim sed et fuga. Facilis debitis, nulla autem repellendus perferendis, libero esse quisquam quod tempore nisi unde? Cum, quibusdam tempora?Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nulla doloremque enim sed et fuga. Facilis debitis, nulla autem repellendus perferendis, libero esse quisquam quod tempore nisi unde? Cum, quibusdam tempora?Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nulla doloremque enim sed et fuga. Facilis debitis, nulla autem repellendus perferendis, libero esse quisquam quod tempore nisi unde? Cum, quibusdam tempora?Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nulla doloremque enim sed et fuga. Facilis debitis, nulla autem repellendus perferendis, libero esse quisquam quod tempore nisi unde? Cum, quibusdam tempora?Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nulla doloremque enim sed et fuga. Facilis debitis, nulla autem repellendus perferendis, libero esse quisquam quod tempore nisi unde? Cum, quibusdam tempora?Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nulla doloremque enim sed et fuga. Facilis debitis, nulla autem repellendus perferendis, libero esse quisquam quod tempore nisi unde? Cum, quibusdam tempora?Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nulla doloremque enim sed et fuga. Facilis debitis, nulla autem repellendus perferendis, libero esse quisquam quod tempore nisi unde? Cum, quibusdam tempora?
+  <div class="swiper hero__swiper">
+    <div class="swiper-wrapper">
+      <div class="swiper-slide hero__slide">
+        <picture class="hero__pic">
+          <source srcset="img/hero/1hero320@x1.webp, img/hero/1hero320@x2.webp 2x, img/hero/1hero320@x3.webp 3x" media="(max-width: 576px)" type="image/webp">
+          <source srcset="img/hero/1hero320@x1.jpg, img/hero/1hero320@x2.jpg 2x, img/hero/1hero320@x3.jpg 3x" media="(max-width: 576px)">
+          <source srcset="img/hero/1hero768@x1.webp, img/hero/1hero768@x2.webp 2x, img/hero/1hero768@x3.webp 3x" media="(max-width: 768px)" type="image/webp">
+          <source srcset="img/hero/1hero768@x1.jpg, img/hero/1hero768@x2.jpg 2x, img/hero/1hero768@x3.jpg 3x" media="(max-width: 768px)">
+          <source srcset="img/hero/1hero1024@x1.webp, img/hero/1hero1024@x2.webp 2x, img/hero/1hero1024@x3.webp 3x" media="(max-width: 1024px)" type="image/webp">
+          <source srcset="img/hero/1hero1024@x1.jpg, img/hero/1hero1024@x2.jpg 2x, img/hero/1hero1024@x3.jpg 3x" media="(max-width: 1024px)">
+          <source srcset="img/hero/1hero1920@x1.avif" type="image/avif">
+          <source srcset="img/hero/1hero1920@x1.webp" type="image/webp">
+          <img loading="lazy" class="hero__image" src="img/hero/1hero1920@x1.jpg" srcset="img/hero/1hero1920@x2.jpg 2x, img/hero/1hero1920@x3.jpg 3x" width="1920" height="400" alt="Первый слайд">
+        </picture>
+        <div class="container hero__container">
+          <div class="hero__content">
+            <h2 class="hero__title hero__title--slide1">Скидка 15% на первую покупку</h2>
+            <button class="btn-reset hero__btn">Получить!</button>
+          </div>
+        </div>
+      </div>
+      <div class="swiper-slide hero__slide">
+        <picture class="hero__pic">
+          <source srcset="img/hero/2hero320@x1.webp, img/hero/2hero320@x2.webp 2x, img/hero/2hero320@x3.webp 3x" media="(max-width: 576px)" type="image/webp">
+          <source srcset="img/hero/2hero320@x1.jpg, img/hero/2hero320@x2.jpg 2x, img/hero/2hero320@x3.jpg 3x" media="(max-width: 576px)">
+          <source srcset="img/hero/2hero768@x1.webp, img/hero/2hero768@x2.webp 2x, img/hero/2hero768@x3.webp 3x" media="(max-width: 768px)" type="image/webp">
+          <source srcset="img/hero/2hero768@x1.jpg, img/hero/2hero768@x2.jpg 2x, img/hero/2hero768@x3.jpg 3x" media="(max-width: 768px)">
+          <source srcset="img/hero/2hero1024@x1.webp, img/hero/2hero1024@x2.webp 2x, img/hero/2hero1024@x3.webp 3x" media="(max-width: 1024px)" type="image/webp">
+          <source srcset="img/hero/2hero1024@x1.jpg, img/hero/2hero1024@x2.jpg 2x, img/hero/2hero1024@x3.jpg 3x" media="(max-width: 1024px)">
+          <source srcset="img/hero/2hero1920@x1.avif" type="image/avif">
+          <source srcset="img/hero/2hero1920@x1.webp" type="image/webp">
+          <img loading="lazy" class="hero__image" src="img/hero/2hero1920@x1.jpg" srcset="img/hero/2hero1920@x2.jpg 2x, img/hero/2hero1920@x3.jpg 3x" width="1920" height="400" alt="Второй слайд">
+        </picture>
+        <div class="container hero__container">
+          <div class="hero__content">
+            <h2 class="hero__title hero__title--slide2">1000+ аксессуаров для дома</h2>
+            <button class="btn-reset hero__btn">Подробнее</button>
+          </div>
+        </div>
+      </div>
+      <div class="swiper-slide hero__slide">
+        <picture class="hero__pic">
+          <source srcset="img/hero/3hero320@x1.webp, img/hero/3hero320@x2.webp 2x, img/hero/3hero320@x3.webp 3x" media="(max-width: 576px)" type="image/webp">
+          <source srcset="img/hero/3hero320@x1.jpg, img/hero/3hero320@x2.jpg 2x, img/hero/3hero320@x3.jpg 3x" media="(max-width: 576px)">
+          <source srcset="img/hero/3hero768@x1.webp, img/hero/3hero768@x2.webp 2x, img/hero/3hero768@x3.webp 3x" media="(max-width: 768px)" type="image/webp">
+          <source srcset="img/hero/3hero768@x1.jpg, img/hero/3hero768@x2.jpg 2x, img/hero/3hero768@x3.jpg 3x" media="(max-width: 768px)">
+          <source srcset="img/hero/3hero1024@x1.webp, img/hero/3hero1024@x2.webp 2x, img/hero/3hero1024@x3.webp 3x" media="(max-width: 1024px)" type="image/webp">
+          <source srcset="img/hero/3hero1024@x1.jpg, img/hero/3hero1024@x2.jpg 2x, img/hero/3hero1024@x3.jpg 3x" media="(max-width: 1024px)">
+          <source srcset="img/hero/3hero1920@x1.avif" type="image/avif">
+          <source srcset="img/hero/3hero1920@x1.webp" type="image/webp">
+          <img loading="lazy" class="hero__image" src="img/hero/3hero1920@x1.jpg" srcset="img/hero/3hero1920@x2.jpg 2x, img/hero/3hero1920@x3.jpg 3x" width="1920" height="400" alt="Третий слайд">
+        </picture>
+        <div class="container hero__container">
+          <div class="hero__content">
+            <h2 class="hero__title hero__title--slide3">Коллекция стильного и яркого текстиля</h2>
+            <button class="btn-reset hero__btn">Подробнее</button>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="swiper-pagination hero__pagination"></div>
   </div>
 </section>
+
