--- a/src/scss/components/_hero.scss
+++ b/src/scss/components/_hero.scss
@@ -1,3 +1,80 @@
 .hero {
-  height: 500px;
+
+  &__pic {
+    position: absolute;
+    width: 100%;
+    z-index: -1;
+  }
+
+  &__image {
+    object-position: 55% 96%;
+  }
+
+  &__image {
+    width: 100%;
+    height: 400px;
+  }
+
+  &__content {
+    padding: 81px 36px 80px 36px;
+  }
+
+  &__title {
+    margin-bottom: 49px;
+    max-width: 496px;
+    font-weight: 700;
+    font-size: 48px;
+    line-height: 65px;
+    color: var(--grey-color);
+
+    &--slide3 {
+      max-width: 587px;
+      color: var(--white-color);
+    }
+  }
+
+  &__btn {
+    padding: 22px 50px;
+    border-radius: 10px;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 100%;
+    color: var(--white-color);
+    background-color: var(--primary-color);
+  }
+}
+
+.swiper-pagination-bullets.swiper-pagination-horizontal {
+  position: absolute;
+  bottom: 30px;
+  text-align: center;
+  width: calc(100% - 2 * 22px);
+  bottom: 22px;
+  left: 15px;
+  text-align: center;
+}
+
+.swiper-pagination-bullet {
+  position: relative;
+  opacity: 1;
+  margin: 0 14px;
+  width: 12px;
+  height: 12px;
+  box-shadow: none;
+  background-color: transparent;
+}
+
+.circular-pagination__bg {
+  stroke: var(--white-color);
+}
+
+.circular-pagination__progress {
+  stroke: var(--secondary-color);
+  stroke-linecap: round;
+  -webkit-transform: rotate(-90deg);
+  -ms-transform: rotate(-90deg);
+  transform: rotate(-90deg);
+  -webkit-transform-origin: center;
+  -ms-transform-origin: center;
+  transform-origin: center;
 }
