--- a/src/scss/vendor.scss
+++ b/src/scss/vendor.scss
@@ -10,6 +10,6 @@
 // @import "../../node_modules/aos/dist/aos";
 
 // стили для свайпера
-// @import "../../node_modules/swiper/swiper-bundle.min";
+@import "../../node_modules/swiper/swiper-bundle.min";
 
 
