--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -7,6 +7,7 @@
 // подключения компонентов страницы
 @import "./components/select";
 @import "./components/nav";
+@import "./components/customPagination";
 @import "./components/burger";
 @import "./components/header";
 @import "./components/hero";
