feat: add slider section special

--- a/src/scss/_settings.scss
+++ b/src/scss/_settings.scss
@@ -148,3 +148,26 @@ input[type="search"]::-webkit-search-results-button,
 input[type="search"]::-webkit-search-results-decoration {
   appearance: none;
 }
+
+.section-title {
+  margin-bottom: 26px;
+  font-family: 'Open Sans';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 32px;
+  line-height: 100%;
+  color: var();
+}
+
+.btn-all {
+  display: inline-block;
+  padding: 17px 33px;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 100%;
+  text-align: center;
+  border-radius: 10px;
+  color: var(--primary-color);
+  border: 2px solid var(--primary-color);
+  background-color: transparent;
+}
