--- a/src/partials/special.html
+++ b/src/partials/special.html
@@ -1,6 +1,20 @@
 <section class="special">
   <div class="container special__container">
-    <h2 class="special__title section-title">Специальные предложения</h2>
+    <div class="special__wrapper">
+      <h2 class="special__title section-title">Специальные предложения</h2>
+      <div class="special__controls">
+        <button class="btn-reset special__controls-btn special__controls--prev">
+          <svg class="special__controls-prev-img special__controls-img">
+            <use xlink:href="img/sprite.svg#arrowBtn"></use>
+          </svg>
+        </button>
+        <button class="btn-reset special__controls-btn special__controls--next">
+          <svg class="special__controls-next-img special__controls-img">
+            <use xlink:href="img/sprite.svg#arrowBtn"></use>
+          </svg>
+        </button>
+      </div>
+    </div>
 
     <div class="swiper special__swiper">
       <ul class="swiper-wrapper list-reset">
