feat: add adaptive 1024 section hero and special

--- a/src/partials/special.html
+++ b/src/partials/special.html
@@ -52,7 +52,7 @@
                 </svg>
               </span>
             </span>
-            <picture class="special__content-pic">
+            <picture class="special__content-pic special__content-pic--center">
               <source srcset="img/special/special2.avif" type="image/avif">
               <source srcset="img/special/special2.webp" type="image/webp">
               <img loading="lazy" src="img/special/special2.png" class="special__content-image" width="450" height="245"
@@ -128,7 +128,7 @@
                 </svg>
               </span>
             </span>
-            <picture class="special__content-pic">
+            <picture class="special__content-pic special__content-pic--center">
               <source srcset="img/special/special5.avif" type="image/avif">
               <source srcset="img/special/special5.webp" type="image/webp">
               <img loading="lazy" src="img/special/special5.png" class="special__content-image" width="463" height="223"
