feat: add adaptive 576 section hero and special

--- a/src/scss/components/_customPagination.scss
+++ b/src/scss/components/_customPagination.scss
@@ -54,4 +54,10 @@
 .swiper-pagination-custom,
 .swiper-pagination-fraction {
   bottom: 40px;
+
+  @include mobile {
+    & {
+      bottom: 117px;
+    }
+  }
 }
