--- a/src/scss/components/_hero.scss
+++ b/src/scss/components/_hero.scss
@@ -1,5 +1,13 @@
 .hero {
 
+  &__swiper {
+    @include mobile {
+      & {
+        padding-bottom: 109px;
+      }
+    }
+  }
+
   &__pic {
     position: absolute;
     width: 100%;
@@ -13,6 +21,10 @@
   &__image {
     width: 100%;
     height: 400px;
+
+    @include mobile {
+      max-height: 210px;
+    }
   }
 
   &__content {
@@ -21,6 +33,12 @@
     @include tablet {
       & {
         padding: 79px 0 80px 0;
+      }
+    }
+
+    @include mobile {
+      & {
+        padding: 30px 0 30px 18px;
       }
     }
   }
@@ -36,6 +54,14 @@
     &--slide3 {
       max-width: 587px;
       color: var(--white-color);
+    }
+
+    @include mobile {
+      & {
+        max-width: 204px;
+        font-size: 20px;
+        line-height: 27px;
+      }
     }
   }
 
@@ -63,6 +89,15 @@
 
     &:active {
       background-color: var(--primary-shade-color);
+    }
+
+    @include mobile {
+      & {
+        position: absolute;
+        bottom: -2px;
+        left: 12px;
+        width: calc(100% - 124px);
+      }
     }
   }
 }
