--- a/src/scss/components/_hero.scss
+++ b/src/scss/components/_hero.scss
@@ -1,13 +1,5 @@
 .hero {
 
-  &__swiper {
-    @include mobile {
-      & {
-        padding-bottom: 109px;
-      }
-    }
-  }
-
   &__pic {
     position: absolute;
     width: 100%;
@@ -38,7 +30,10 @@
 
     @include mobile {
       & {
-        padding: 30px 0 30px 18px;
+        padding: 30px 0 30px 0;
+        display: flex;
+        flex-direction: column;
+        height: 271px;
       }
     }
   }
@@ -58,6 +53,8 @@
 
     @include mobile {
       & {
+        margin-bottom: 0;
+        padding-left: 18px;
         max-width: 204px;
         font-size: 20px;
         line-height: 27px;
@@ -93,10 +90,8 @@
 
     @include mobile {
       & {
-        position: absolute;
-        bottom: -2px;
-        left: 12px;
-        width: calc(100% - 124px);
+        margin-top: auto;
+        width: calc(100% - 100px);
       }
     }
   }
