feat: add section raiting decstop

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -9,7 +9,9 @@
 @import "./components/nav";
 @import "./components/customPagination";
 @import "./components/burger";
+@import "./components/card";
 @import "./components/header";
 @import "./components/hero";
 @import "./components/special";
+@import "./components/rating";
 
