--- a/src/scss/components/_special.scss
+++ b/src/scss/components/_special.scss
@@ -17,7 +17,11 @@
   }
 
   &__title {
-    font-size: 24px;
+    @include mobile {
+      & {
+        font-size: 24px;
+      }
+    }
   }
 
   &__controls {
