feat: add adaptive 1024 and 768 section rating

--- a/src/scss/components/_rating.scss
+++ b/src/scss/components/_rating.scss
@@ -2,6 +2,12 @@
   padding-top: 35px;
   padding-bottom: 35px;
 
+  @include tablet {
+    & {
+      padding-top: 36px;
+    }
+  }
+
   &__title {
     margin-bottom: 26px;
   }
@@ -9,15 +15,57 @@
   &__items {
     margin-bottom: 32px;
 
-    .card__list {
+    @include tablet {
+      & {
+        margin-bottom: 33px;
+      }
+    }
+
+    & .card__list {
       display: grid;
       grid-auto-flow: dense;
       grid-template-columns: repeat(4, 1fr);
       gap: 32px;
+
+      @include tablet {
+        & {
+          grid-template-columns: repeat(3, 1fr);
+        }
+      }
+
+      @include high-tablet {
+        & {
+          grid-template-columns: repeat(2, 1fr);
+        }
+      }
+
+      @include mobile {
+        & {
+          gap: 16px;
+        }
+      }
+    }
+
+    & .card__item {
+      @include tablet {
+        & {
+          padding: 30.3px 30px 30px 30px;
+        }
+
+        & .card__picture {
+          margin-bottom: 16.5px;
+        }
+      }
     }
 
     & .card__item:nth-child(n + 9) {
       display: none;
+    }
+
+    @include tablet {
+      & .card__item:nth-child(n + 7) {
+        display: none;
+      }
     }
   }
 
