feat: add adaptive mobile section rating

--- a/src/scss/components/_special.scss
+++ b/src/scss/components/_special.scss
@@ -6,7 +6,7 @@
   @include mobile {
     & {
       padding-top: 13px;
-      padding-bottom: 48px;
+      padding-bottom: 60px;
     }
   }
 
@@ -34,7 +34,7 @@
       & {
         position: absolute;
         left: 37.8%;
-        bottom: 0;
+        bottom: 12px;
       }
     }
 
