--- a/src/scss/_settings.scss
+++ b/src/scss/_settings.scss
@@ -156,7 +156,7 @@ input[type="search"]::-webkit-search-results-decoration {
   font-weight: 400;
   font-size: 32px;
   line-height: 100%;
-  color: var();
+  color: var(--night-rider-color);
 }
 
 .btn-all {
