--- a/src/scss/components/_rating.scss
+++ b/src/scss/components/_rating.scss
@@ -8,8 +8,20 @@
     }
   }
 
+  @include mobile {
+    & {
+      padding-top: 58px;
+    }
+  }
+
   &__title {
     margin-bottom: 26px;
+
+    @include mobile {
+      & {
+        font-size: 24px;
+      }
+    }
   }
 
   &__items {
@@ -56,6 +68,50 @@
           margin-bottom: 16.5px;
         }
       }
+
+      @include mobile {
+        & {
+          padding: 16px;
+        }
+
+        & .card__rating {
+          font-size: 12px;
+        }
+
+        & .card__rating-img {
+          margin-right: 6px;
+          width: 13px;
+          height: 12px;
+        }
+
+        & .card__picture {
+          margin-bottom: 7px;
+          min-height: 60.9px;
+          align-items: center;
+          margin-right: -15px;
+          margin-left: -15px;
+          padding-right: 0;
+          padding-left: 0;
+        }
+
+        & .card__picture-image {
+          width: 78%;
+        }
+
+        & .card__title {
+          margin-bottom: 16px;
+          max-width: 108px;
+          font-size: 16px;
+        }
+
+        & .card__price {
+          margin-bottom: 16px;
+        }
+
+        & .card__link {
+          padding: 10px 23px;
+        }
+      }
     }
 
     & .card__item:nth-child(n + 9) {
@@ -72,7 +128,7 @@
   &__btn {
     margin: 0 auto;
     max-width: 298px;
-    padding: 20px 35px;
+    padding: 20px 34px;
     display: flex;
     align-items: center;
     justify-content: center;
